--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#667eea",
   "icons": [
     {
-      "src": "android-chrome-192x192.png",
+      "src": "apple-touch-icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
