--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,18 @@
 {
   "name": "Horários de Autocarros",
-  "short_name": "Horários",
-  "description": "App para consultar os horários de autocarros locais.",
+  "short_name": "Autocarros",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#667eea",
+  "background_color": "#ffffff",
+  "theme_color": "#2c3e50",
   "icons": [
     {
-      "src": "apple-touch-icon.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "android-chrome-512x512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
