--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#2c3e50",
+  "theme_color": "#005bb5",
   "icons": [
     {
       "src": "icon-192.png",
@@ -19,4 +19,3 @@
   ],
   "gcm_sender_id": "875403627280"
 }
-
