--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,27 @@
 {
   "name": "App da Kika",
-  "short_name": "Autocarros",
-  "start_url": ".",
+  "short_name": "App da Kika",
+  "description": "A tua app no Chrome como PWA",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#005bb5",
+  "background_color": "#0d6efd",
+  "theme_color": "#0d6efd",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
-  ],
-  "gcm_sender_id": "875403627280"
+  ]
 }
